[package]
name        = "uiharu-arch-arm64"
description = "Arm64 backend for Uiharu JIT"
readme      = "README.md"

version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
uiharu-arch = { path = "../uiharu-arch" }

[dev-dependencies]
yaxpeax-arm = "0.3.0" # for tests
